--- a/dbServer/templates/court/courts.html
+++ b/dbServer/templates/court/courts.html
@@ -24,57 +24,57 @@
                 </div>
                 <div class="lists-table__col lists-table__col-name">
                     <div class="lists-table__box lists-table__box-name">
-                        <div class="toggle-col">
-                            <ul class="toggle-col__list">
-                                <li class="toggle-col__li">
+                        <div class="filter-col">
+                            <ul class="filter-col__list">
+                                <li class="filter-col__li">
                                     <label>
                                         <input type="checkbox" disabled checked>
                                         <span class="text">Номер дела</span>
                                     </label>
                                 </li>
-                                <li class="toggle-col__li">
+                                <li class="filter-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col2">
                                         <span class="text">Номер письма</span>
                                     </label>
                                 </li>
-                                <li class="toggle-col__li">
+                                <li class="filter-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col3">
                                         <span class="text">Истец</span>
                                     </label>
                                 </li>
-                                <li class="toggle-col__li">
+                                <li class="filter-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col4">
                                         <span class="text">Ответчик</span>
                                     </label>
                                 </li>
-                                <li class="toggle-col__li">
+                                <li class="filter-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col5">
                                         <span class="text">Судья</span>
                                     </label>
                                 </li>
-                                <li class="toggle-col__li">
+                                <li class="filter-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col6">
                                         <span class="text">Статус дела</span>
                                     </label>
                                 </li>
-                                <li class="toggle-col__li">
+                                <li class="filter-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col7">
                                         <span class="text">Ответственный</span>
                                     </label>
                                 </li>
-                                <li class="toggle-col__li">
+                                <li class="filter-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col8">
                                         <span class="text">Статус</span>
                                     </label>
                                 </li>
-                                <li class="toggle-col__li">
+                                <li class="filter-col__li">
                                     <label>
                                         <input type="checkbox" checked id="col9">
                                         <span class="text">Ссылка на дело</span>
