--- a/dbServer/templates/dbServer/ErrPaje.html
+++ b/dbServer/templates/dbServer/ErrPaje.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>404 Error Page</title>
-    <link type="text/css", href="{% static "dbServer/css/styles.css" %}" rel="stylesheet" />
+    <link type="text/css" , href="{% static "dbServer/../../../html/../../static/dbServer/css/styles.css" %}" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta https-equiv="X-UA-Compatible" content="ie=edge" />
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap" rel="stylesheet">
