--- a/dbServer/templates/sms/sms.html
+++ b/dbServer/templates/sms/sms.html
@@ -24,7 +24,7 @@
                 {% for i in Companies %}
                 <div class="lists-table__box">
                     <label for="check">
-                       <input type="checkbox"  value="{% if  i.status == 'Отправлено' %} N ;{% endif %} {{ i.id }}; {{ i.template }}; {{ i.contacts }}; {{  i.mailing_list_name }}">
+                        <input type="checkbox" value="{{ i.id}},{{ i.template}},{{ i.contacts }}">
                         <span></span>
                     </label>
                 </div>
@@ -32,51 +32,51 @@
             </div>
             <div class="lists-table__col lists-table__col-name">
                 <div class="lists-table__box lists-table__box-name">
-                    <div class="toggle-col">
-                        <ul class="toggle-col__list">
-                            <li class="toggle-col__li">
+                    <div class="filter-col">
+                        <ul class="filter-col__list">
+                            <li class="filter-col__li">
                                 <label>
                                     <input type="checkbox" disabled checked>
                                     <span class="text">Наименование рассылки</span>
                                 </label>
                             </li>
-                            <li class="toggle-col__li">
+                            <li class="filter-col__li">
                                 <label>
                                     <input type="checkbox" checked id="col2">
                                     <span class="text">Шаблон</span>
                                 </label>
                             </li>
-                            <li class="toggle-col__li">
+                            <li class="filter-col__li">
                                 <label>
                                     <input type="checkbox" checked id="col3">
                                     <span class="text">Кол-во писем</span>
                                 </label>
                             </li>
-                            <li class="toggle-col__li">
+                            <li class="filter-col__li">
                                 <label>
                                     <input type="checkbox" checked id="col4">
                                     <span class="text">Дата создания</span>
                                 </label>
                             </li>
-                            <li class="toggle-col__li">
+                            <li class="filter-col__li">
                                 <label>
                                     <input type="checkbox" checked id="col5">
                                     <span class="text">Дата отправки</span>
                                 </label>
                             </li>
-                            <li class="toggle-col__li">
+                            <li class="filter-col__li">
                                 <label>
                                     <input type="checkbox" checked id="col6">
                                     <span class="text">Ответственный</span>
                                 </label>
                             </li>
-                            <li class="toggle-col__li">
+                            <li class="filter-col__li">
                                 <label>
                                     <input type="checkbox" checked id="col7">
                                     <span class="text">Статус</span>
                                 </label>
                             </li>
-                            <li class="toggle-col__li">
+                            <li class="filter-col__li">
                                 <label>
                                     <input type="checkbox" checked id="col8">
                                     <span class="text">Привязанные контакты</span>
